--- a/PhoneScoutAdmin/App.xaml
+++ b/PhoneScoutAdmin/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PhoneScoutAdmin"
-             StartupUri="ManufacturerHome.xaml">
+             StartupUri="Home.xaml">
     <Application.Resources>
          
     </Application.Resources>
