--- a/PhoneScoutAdmin/Home.xaml
+++ b/PhoneScoutAdmin/Home.xaml
@@ -49,7 +49,7 @@
 
             <!--Side menu-->
             <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Background="#80A4CB">
-                <Button Content="Manage phones" Margin="15,30,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadPhones"/>
+                <Button Content="Manage phones" Margin="15,30,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding LoadPhonesCommand}"/>
 
                 <Button Content="Manage manufacturers" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadManufacturers"/>
 
@@ -77,7 +77,14 @@
 
 
 
-                <DataGrid x:Name="phoneDataGrid" Grid.Row="1" Grid.Column="0" SelectionChanged="showInfos" AutoGenerateColumns="True"/>
+                <DataGrid
+    x:Name="phoneDataGrid"
+    Grid.Row="1"
+    Grid.Column="0"
+    ItemsSource="{Binding Phones}"
+    SelectedItem="{Binding SelectedPhone}"
+    AutoGenerateColumns="True"/>
+
 
 
 
@@ -141,21 +148,23 @@ ToolTip="Displays the amount of that part in the storage."
 
 
 
-                            <TextBox x:Name="phoneName" Width="180" Height="20" Grid.Row="0" Grid.Column="1" Margin="5"/>
-                            <TextBox x:Name="phonePrice" Width="180" Height="20" Grid.Row="1" Grid.Column="1" Margin="5"/>
+                            <TextBox Grid.Row="0" Grid.Column="1"
+         Text="{Binding PhoneName, UpdateSourceTrigger=PropertyChanged}"
+         Width="180" Margin="5"/>
 
-                            <CheckBox x:Name="phoneInStore" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                                <CheckBox.LayoutTransform>
-                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                </CheckBox.LayoutTransform>
-                            </CheckBox>
-                            <CheckBox x:Name="phoneAvailable" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                                <CheckBox.LayoutTransform>
-                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                </CheckBox.LayoutTransform>
-                            </CheckBox>
+                            <TextBox Grid.Row="1" Grid.Column="1"
+         Text="{Binding PhonePrice}"
+         Width="180" Margin="5"/>
 
-                            <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="updatePhone"/>
+                            <CheckBox Grid.Row="2" Grid.Column="1"
+          IsChecked="{Binding PhoneInStore}"
+          HorizontalAlignment="Center"/>
+
+                            <CheckBox Grid.Row="3" Grid.Column="1"
+          IsChecked="{Binding PhoneAvailable}"
+          HorizontalAlignment="Center"/>
+
+                            <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Command="{Binding SavePhoneCommand}"/>
 
                         </Grid>
                     </GroupBox>
@@ -163,8 +172,8 @@ ToolTip="Displays the amount of that part in the storage."
 
 
                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <Button Width="200" Content="Modify the phone" Margin="10,15,10,0" Padding="5" BorderBrush="#2300B3" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="createPhone"/>
-                    <Button Width="200" Content="Delete phone" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="deletePhone"/>
+                    <Button Width="200" Content="Modify the phone" Margin="10,15,10,0" Padding="5" BorderBrush="#2300B3" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" />
+                    <Button Width="200" Content="Delete phone" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Command="{Binding DeletePhoneCommand}"/>
                 </StackPanel>
 
                 <Button Grid.Row="2" Grid.Column="1" Width="200" Content="Create phone" Margin="10,15,10,0" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
