--- a/PhoneScoutAdmin/Home.xaml
+++ b/PhoneScoutAdmin/Home.xaml
@@ -51,7 +51,7 @@
             <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Background="#80A4CB">
                 <Button Content="Manage phones" Margin="15,30,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding LoadPhonesCommand}"/>
 
-                <Button Content="Manage manufacturers" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadManufacturers"/>
+                <Button Content="Manage manufacturers" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding LoadManufacturersCommand}"/>
 
                 <Button Content="Manage users" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadUsers"/>
 
@@ -192,9 +192,12 @@ ToolTip="Displays the amount of that part in the storage."
 
 
 
-                <DataGrid x:Name="manufacturerDataGrid" Grid.Row="1" Grid.Column="0" SelectionChanged="showInfos" AutoGenerateColumns="True">
+                <DataGrid x:Name="manufacturerDataGrid" Grid.Row="1" Grid.Column="0" SelectionChanged="showInfos" ItemsSource="{Binding Manufacturers}" SelectedItem="{Binding SelectedManufacturer}"
+                  AutoGenerateColumns="True">
 
                 </DataGrid>
+
+
 
 
                 <WrapPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -253,7 +256,7 @@ ToolTip="Displays the amount of that part in the storage."
 
 
 
-                            <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="updateManufacturer"/>
+                            <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Command="{Binding SaveManufacturer}"/>
 
                         </Grid>
                     </GroupBox>
@@ -261,7 +264,7 @@ ToolTip="Displays the amount of that part in the storage."
 
 
                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">                    
-                    <Button Width="200" Content="Delete manufacturer" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
+                    <Button Width="200" Content="Delete manufacturer" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Command="{Binding DeleteManufacturer}"/>
                 </StackPanel>                
             </Grid>
 
