--- a/PhoneScoutAdmin/ManufacturerHome.xaml
+++ b/PhoneScoutAdmin/ManufacturerHome.xaml
@@ -5,250 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PhoneScoutAdmin"
         mc:Ignorable="d"
-        Title="ManufacturerHome" Height="700" Width="1350">
-    <DockPanel>
-        <!-- MENU -->
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="File"/>
-            <MenuItem Header="Edit"/>
-        </Menu>
+        Title="ManufacturerHome">
+    
 
-        <!-- MAIN CONTENT -->
+    <DockPanel>
+
+        <!-- MENU stays -->
+
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="8*"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="8*"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
 
-            <!--Logo-->
-            <WrapPanel Orientation="Horizontal" >
-                <Image Grid.Row="0" Grid.Column="0" Source="/Images/ImagePhoneScoutLogo.png" Margin="5"/>
-                <Label Grid.Row="0" Grid.Column="0" FontSize="24" FontWeight="Bold" Content="Phone" VerticalAlignment="Center" Foreground="#2300B3"/>
-                <Label Grid.Row="0" Grid.Column="0" FontSize="24" FontWeight="Bold" Content="Scout" VerticalAlignment="Center" Foreground="#68F145" Margin="-5,0,0,0"/>
-            </WrapPanel>
+            <!-- SIDE MENU -->
+            <StackPanel Grid.Column="0"
+                        Background="#80A4CB">
 
-            <!--Copyright-->
-            <WrapPanel Grid.Row="2" Grid.Column="0" Orientation="Vertical" HorizontalAlignment="Left">
-                <Label Content="©2026 PhoneScout."/>
-                <Label Content="All rights reserved."/>
-            </WrapPanel>
+                <Button Content="Manage my phones"
+                        Command="{Binding ShowPhonesCommand}" />
 
-            <!--Header-->
-            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <TextBlock Text="Admin Interface /" FontSize="28" FontWeight="Bold"/>
-                <TextBlock Text=" Home" FontSize="28" FontWeight="Bold" Foreground="#68F145"/>
-
+                <Button Content="Manage my datas"
+                        Command="{Binding ShowManufacturerCommand}" />
             </StackPanel>
 
-
-            <!--Side menu-->
-            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical" Background="#80A4CB">
-                <Button Content="Manage my phones" Margin="15,30,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadPhones"/>
-
-                <Button Content="Manage my datas" Margin="15,25,15,10" FontSize="16" Width="180" Padding="5" Background="#80A4CB" Foreground="White" BorderBrush="White" BorderThickness="3" VerticalAlignment="Center" HorizontalAlignment="Center" Click="loadManufacturer"/>
-
-                
-
-            </StackPanel>
-
-            <!--Main Content-->
-            <Grid Grid.Row="1" Grid.Column="1" Background="LightGray" x:Name="phoneDetails"  Visibility="Collapsed">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="12*"/>
-                    <RowDefinition Height="2*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*"/>
-                    <ColumnDefinition Width="4*"/>
-                </Grid.ColumnDefinitions>
-
-
-
-                <DataGrid x:Name="phoneDataGrid" Grid.Row="1" Grid.Column="0" SelectionChanged="showInfos" AutoGenerateColumns="True"/>
-
-
-
-
-                <WrapPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <GroupBox Grid.Row="1" Margin="0,40,0,5" Padding="25" Header="  Modify the phone details  " BorderBrush="#2300B3" BorderThickness="2">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the amount of that part in the storage."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Phone name: " FontSize="16"/>
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the amount of that part in the storage."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Phone price: " FontSize="16"/>
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the amount of that part in the storage."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Phone in storage: " FontSize="16"/>
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the amount of that part in the storage."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Phone available: " FontSize="16"/>
-                            </StackPanel>
-
-
-
-                            <TextBox x:Name="phoneName" Width="180" Height="20" Grid.Row="0" Grid.Column="1" Margin="5"/>
-                            <TextBox x:Name="phonePrice" Width="180" Height="20" Grid.Row="1" Grid.Column="1" Margin="5"/>
-
-                            <CheckBox x:Name="phoneInStore" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                                <CheckBox.LayoutTransform>
-                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                </CheckBox.LayoutTransform>
-                            </CheckBox>
-                            <CheckBox x:Name="phoneAvailable" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                                <CheckBox.LayoutTransform>
-                                    <ScaleTransform ScaleX="1.5" ScaleY="1.5"/>
-                                </CheckBox.LayoutTransform>
-                            </CheckBox>
-
-                            <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save datas" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="updatePhone"/>
-
-                        </Grid>
-                    </GroupBox>
-                </WrapPanel>
-
-
-                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <Button Width="200" Content="Modify the phone" Margin="10,15,10,0" Padding="5" BorderBrush="#2300B3" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="createPhone"/>
-                    <Button Width="200" Content="Delete phone" Margin="10,15,10,0" Padding="5" BorderBrush="Red" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="deletePhone"/>
-                </StackPanel>
-
-                <Button Grid.Row="2" Grid.Column="1" Width="200" Content="Create phone" Margin="10,15,10,0" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke"/>
-            </Grid>
-
-            <Grid Grid.Row="1" Grid.Column="1" Background="LightGray" x:Name="manufacturerDetails"  Visibility="Visible">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="6*"/>
-                    <RowDefinition Height="1*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="6*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-
-
-
-                
-
-
-
-
-                <WrapPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <GroupBox Grid.Row="1" Margin="0,0,0,0" Padding="25" Header="  Modify the maufacturer datas  " BorderBrush="#2300B3" BorderThickness="2">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                <RowDefinition Height="1*"/>
-                                
-                                
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the name of the manufacturer."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Manufacturer name: " FontSize="16"/>
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the manufacturer's e-mail address."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Manufacturer e-mail address: " FontSize="16"/>
-                            </StackPanel>
-
-                            <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Margin="5">
-                                <TextBlock Text="ⓘ "
-
-ToolTip="Displays the URL of the manufacturer's official website."
-    VerticalAlignment="Center"
-    FontSize="16" Foreground="#2300B3"/>
-
-                                <TextBlock Text="Manufacturer URL: " FontSize="16"/>
-                            </StackPanel>
-
-                            
-
-
-
-                            <TextBox x:Name="manufacturerName" Width="180" Height="20" Grid.Row="0" Grid.Column="1" Margin="5"/>
-                            <TextBox x:Name="manufacturerEmail" Width="180" Height="20" Grid.Row="1" Grid.Column="1" Margin="5"/>
-                            <TextBox x:Name="manufacturerURL" Width="180" Height="20" Grid.Row="2" Grid.Column="1" Margin="5"/>
-
-                            
-
-                            <Button Grid.Row="5" Grid.ColumnSpan="2" Content="Save changes" Margin="10,15,10,-15" Padding="5" BorderBrush="#68F145" BorderThickness="3" FontSize="18" VerticalAlignment="Center" Background="WhiteSmoke" Click="updatePhone"/>
-
-                        </Grid>
-                    </GroupBox>
-                </WrapPanel>
-
-
-                
-            </Grid>
-
-
+            <!-- MAIN CONTENT -->
+            <ContentControl Grid.Column="1"
+                            Content="{Binding CurrentView}" />
         </Grid>
     </DockPanel>
 </Window>
